# maisa-parser

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  Makefile  PLAN_01_PRODUCTION_READINESS.md  PLAN_02_PRIVACY_UPGRADE.md  README.md  README_fi.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: exceptions.py  extractors.py  maisa_parser.py  models.py  privacy.py  utils.py
src/maisa_parser.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: run_tests.py  test_cli.py  test_privacy.py
tests/fixtures/: DOC0001.XML  DOC0002.XML  DOC_REALISTIC.XML  METADATA.XML
